syntax = "proto3";

package interchange;
option java_package = "me.nevi.grpc-demo";
option java_outer_classname = "InterchangeProtos";
option optimize_for = SPEED;

service InterchangeService {
  rpc StreamPackages (ObjectID) returns (stream Package) {}
}

message ObjectID {
  string _id = 1;
}

message Package {
  string name = 1;
}
